<resources>
    <string name="app_name">Propinatron2000</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="delete"><![CDATA[<--]]></string>
    <string name="mal">Mal</string>
    <string name="normal">Normal</string>
    <string name="excelente">Excelente</string>
    <string name="propinator2000">Propinator2000</string>
    <string name="calcular">Calcular</string>
    <string name="menos">-</string>
</resources>